@@ -27,6 +27,7 @@ import org.minimalj.security.Subject;
 import org.minimalj.transaction.InputStreamTransaction;
 import org.minimalj.transaction.OutputStreamTransaction;
 import org.minimalj.transaction.Transaction;
+import org.minimalj.util.CloneHelper;
 import org.minimalj.util.IdUtils;
 import org.minimalj.util.SerializationContainer;
 import org.minimalj.util.StringUtils;
@@ -159,7 +160,9 @@ public class RestHTTPD extends NanoHTTPD {
 			if (clazz != null) {
 				if (pathElements.length >= 2) {
 					String id = pathElements[1];
-					Backend.delete(clazz, id);
+					Object idOnlyObject = CloneHelper.newInstance(clazz);
+					IdUtils.setId(idOnlyObject, id);
+					Backend.delete(idOnlyObject);
  				} else {
  					return newFixedLengthResponse(Status.BAD_REQUEST, "text/plain", "Post expects id in url");
  				}
