@@ -11,11 +11,13 @@ import java.util.logging.Logger;
 
 import org.minimalj.backend.repository.CountTransaction;
 import org.minimalj.backend.repository.DeleteEntityTransaction;
+import org.minimalj.backend.repository.DeleteTransaction;
 import org.minimalj.backend.repository.InsertTransaction;
 import org.minimalj.backend.repository.ReadCriteriaTransaction;
 import org.minimalj.backend.repository.ReadEntityTransaction;
 import org.minimalj.backend.repository.UpdateTransaction;
 import org.minimalj.repository.Repository;
+import org.minimalj.repository.query.Criteria;
 import org.minimalj.repository.query.Query;
 import org.minimalj.security.Authentication;
 import org.minimalj.security.Subject;
@@ -123,8 +125,8 @@ public class SocketBackend extends Backend {
 		}
 
 		@Override
-		public <T> long count(Class<T> clazz, Query query) {
-			return execute(new CountTransaction<T>(clazz, query));
+		public <T> long count(Class<T> clazz, Criteria criteria) {
+			return execute(new CountTransaction<T>(clazz, criteria));
 		}
 		
 		@Override
@@ -138,8 +140,13 @@ public class SocketBackend extends Backend {
 		}
 
 		@Override
-		public <T> void delete(Class<T> clazz, Object id) {
-			execute(new DeleteEntityTransaction<T>(clazz, id));
+		public <T> void delete(T object) {
+			execute(new DeleteEntityTransaction<T>(object));
+		}
+
+		@Override
+		public <T> int delete(Class<T> clazz, Criteria criteria) {
+			return execute(new DeleteTransaction<T>(clazz, criteria));
 		}
 	}
 
