@@ -3,6 +3,8 @@ package org.minimalj.backend.repository;
 import java.util.Objects;
 
 import org.minimalj.util.ClassHolder;
+import org.minimalj.util.CloneHelper;
+import org.minimalj.util.FieldUtils;
 import org.minimalj.util.IdUtils;
 
 public class DeleteEntityTransaction<ENTITY> extends EntityTransaction<ENTITY, Void> {
@@ -10,7 +12,9 @@ public class DeleteEntityTransaction<ENTITY> extends EntityTransaction<ENTITY, V
 
 	private final ClassHolder<ENTITY> classHolder;
 	private final Object id;
-
+	private final Integer version;
+	private final transient Object object;
+	
 	@Override
 	public Class<ENTITY> getEntityClazz() {
 		return classHolder.getClazz();
@@ -19,24 +23,23 @@ public class DeleteEntityTransaction<ENTITY> extends EntityTransaction<ENTITY, V
 	public DeleteEntityTransaction(ENTITY object) {
 		Objects.nonNull(object);
 		this.classHolder = new ClassHolder<ENTITY>((Class<ENTITY>) object.getClass());
+		this.object = object;
 		this.id = IdUtils.getId(object);
-	}
-
-	protected DeleteEntityTransaction(Class<ENTITY> clazz) {
-		this.classHolder = new ClassHolder<ENTITY>(clazz);
-		this.id = null;
-	}
-	
-	public DeleteEntityTransaction(Class<ENTITY> clazz, Object id) {
-		Objects.nonNull(clazz);
-		Objects.nonNull(id);
-		this.classHolder = new ClassHolder<ENTITY>(clazz);
-		this.id = id;
+		this.version = FieldUtils.hasValidHistorizedField(object.getClass()) ? IdUtils.getVersion(object) : null;
 	}
 
 	@Override
 	public Void execute() {
-		delete(getEntityClazz(), id);
+		if (object != null) {
+			repository().delete(object);
+		} else {
+			ENTITY idOnly = CloneHelper.newInstance(getEntityClazz());
+			IdUtils.setId(idOnly, id);
+			if (version != null) {
+				IdUtils.setVersion(idOnly, version);
+			}
+			repository().delete(idOnly);
+		}
 		return null;
 	}
 }
